example: add tmp-srcTranspiler-swc

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,7 @@
     "access": "public"
   },
   "dependencies": {
+    "history": "5.0.1",
     "react": "18.0.0-alpha-4298ddbc5-20211023",
     "react-dom": "18.0.0-alpha-4298ddbc5-20211023",
     "react-router-dom": "6.0.0-beta.8"
