--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lint-staged": "^11.2.3",
     "prettier": "^2.4.1",
     "prettier-plugin-organize-imports": "^2.3.4",
+    "regenerator-runtime": "^0.13.9",
     "resolve": "^1.20.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
