--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -25,6 +25,12 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "antd": "^4.16.13",
+    "antd-dayjs-webpack-plugin": "^1.0.6",
+    "babel-plugin-import": "^1.13.3",
+    "dayjs": "^1.10.7"
+  },
   "devDependencies": {
     "umi": "4.0.0-beta.5"
   }
