chore: add plugin-demo (#179)

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/resolve": "^1.20.1",
+    "@umijs/plugins": "workspace:*",
     "@umijs/bundler-utils": "workspace:*",
     "@umijs/bundler-vite": "workspace:*",
     "@umijs/bundler-webpack": "workspace:*",
