--- a/packages/mfsu/package.json
+++ b/packages/mfsu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/mfsu",
-  "version": "4.0.0-beta.5",
+  "version": "4.0.0-beta.6",
   "description": "@umijs/mfsu",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -27,15 +27,15 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/bundler-esbuild": "4.0.0-beta.5",
-    "@umijs/bundler-utils": "4.0.0-beta.5",
-    "@umijs/utils": "4.0.0-beta.5"
+    "@umijs/bundler-esbuild": "4.0.0-beta.6",
+    "@umijs/bundler-utils": "4.0.0-beta.6",
+    "@umijs/utils": "4.0.0-beta.6"
   },
   "devDependencies": {
     "@types/express": "4.17.13",
+    "enhanced-resolve": "5.8.3",
     "mrmime": "1.0.0",
-    "webpack": "5.61.0",
-    "enhanced-resolve": "5.8.3"
+    "webpack": "5.61.0"
   },
   "compiledConfig": {
     "deps": [
