--- a/packages/mfsu/package.json
+++ b/packages/mfsu/package.json
@@ -35,14 +35,19 @@
     "@types/express": "4.17.13",
     "enhanced-resolve": "5.8.3",
     "mrmime": "1.0.0",
-    "webpack": "5.61.0"
+    "webpack": "5.61.0",
+    "webpack-virtual-modules": "0.4.3"
   },
   "compiledConfig": {
     "deps": [
-      "mrmime"
+      "mrmime",
+      "webpack-virtual-modules"
     ],
     "externals": {
       "mrmime": "$$LOCAL"
-    }
+    },
+    "excludeDtsDeps": [
+      "webpack-virtual-modules"
+    ]
   }
 }
