--- a/examples/ant-design-pro/package.json
+++ b/examples/ant-design-pro/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
-    "dev": "umi dev"
+    "dev": "umi dev",
+    "start": "npm run dev"
   },
   "dependencies": {
     "@ant-design/pro-layout": "6.28.1",
     "@ant-design/icons": "4.7.0",
-    "antd": "4.16.13"
+    "antd": "4.16.13",
+    "umi": "4.0.0-beta.7"
   }
 }
