--- a/examples/tmp-swcTranspiler-swc/package.json
+++ b/examples/tmp-swcTranspiler-swc/package.json
@@ -1,5 +1,9 @@
 {
   "scripts": {
-    "dev": "umi dev"
+    "dev": "umi dev",
+    "start": "npm run dev"
+  },
+  "dependencies": {
+    "umi": "4.0.0-beta.7"
   }
 }
