--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -38,8 +38,8 @@
     "@umijs/renderer-react": "4.0.0-beta.8",
     "@umijs/server": "4.0.0-beta.8",
     "@umijs/utils": "4.0.0-beta.8",
-    "body-parser": "^1.19.0",
-    "multer": "^1.4.3",
+    "body-parser": "1.19.0",
+    "multer": "1.4.3",
     "path-to-regexp": "1.7.0",
     "react": "18.0.0-alpha-f2c381131-20211004",
     "react-dom": "18.0.0-alpha-f2c381131-20211004",
