--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -7,7 +7,8 @@
   "files": [
     "assets",
     "dist",
-    "templates"
+    "templates",
+    "compiled"
   ],
   "scripts": {
     "build": "pnpm tsc",
@@ -38,12 +39,22 @@
     "@umijs/renderer-react": "4.0.0-beta.8",
     "@umijs/server": "4.0.0-beta.8",
     "@umijs/utils": "4.0.0-beta.8",
-    "body-parser": "1.19.0",
-    "multer": "1.4.3",
-    "path-to-regexp": "1.7.0",
     "react": "18.0.0-alpha-f2c381131-20211004",
     "react-dom": "18.0.0-alpha-f2c381131-20211004",
     "react-router": "6.0.0-beta.7",
     "react-router-dom": "6.0.0-beta.7"
+  },
+  "devDependencies": {
+    "@types/body-parser": "1.19.2",
+    "@types/multer": "1.4.7",
+    "body-parser": "1.19.0",
+    "multer": "1.4.3",
+    "path-to-regexp": "1.7.0"
+  },
+  "compiledConfig": {
+    "deps": [
+      "body-parser",
+      "multer"
+    ]
   }
 }
