dep: upgrade prettier to 2.5

--- a/packages/utils/compiled/prettier/package.json
+++ b/packages/utils/compiled/prettier/package.json
@@ -1,5 +1,1 @@
-{
-  "name": "prettier",
-  "author": "James Long",
-  "license": "MIT"
-}
+{"name":"prettier","author":"James Long","license":"MIT"}
