--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,5 @@
   "trailingComma": "all",
   "proseWrap": "never",
   "overrides": [{ "files": ".prettierrc", "options": { "parser": "json" } }],
-  "plugins": ["prettier-plugin-organize-imports"]
+  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-packagejson"]
 }
