--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "private": true,
   "scripts": {
-    "preinstall": "esno scripts/checkNpmClient.ts",
-    "format": "prettier --write .",
     "bootstrap": "esno scripts/bootstrap.ts",
-    "release": "esno scripts/release.ts",
     "build": "pnpm -r --filter ./packages run build",
     "build:release": "pnpm -r --filter ./packages run build -- --declarationMap false",
-    "dev": "pnpm -r --filter ./packages --parallel run dev",
     "dep:update": "esno scripts/checkNpmClient.ts && pnpm up --interactive --latest --recursive",
+    "dev": "pnpm -r --filter ./packages --parallel run dev",
+    "format": "prettier --write .",
+    "preinstall": "esno scripts/checkNpmClient.ts",
+    "prepare": "husky install",
+    "release": "esno scripts/release.ts",
     "test": "jest",
-    "test:clean": "jest --clearCache",
-    "prepare": "husky install"
+    "test:clean": "jest --clearCache"
+  },
+  "lint-staged": {
+    "*.{jsx,less,md,json}": [
+      "prettier --write"
+    ],
+    "*.ts?(x)": [
+      "prettier --parser=typescript --write"
+    ]
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
@@ -19,10 +27,10 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/resolve": "^1.20.1",
-    "@umijs/plugins": "workspace:*",
     "@umijs/bundler-utils": "workspace:*",
     "@umijs/bundler-vite": "workspace:*",
     "@umijs/bundler-webpack": "workspace:*",
+    "@umijs/plugins": "workspace:*",
     "@umijs/server": "workspace:*",
     "@umijs/utils": "workspace:*",
     "@vercel/ncc": "^0.31.1",
@@ -36,6 +44,7 @@
     "lint-staged": "^11.2.3",
     "prettier": "^2.5.0",
     "prettier-plugin-organize-imports": "^2.3.4",
+    "prettier-plugin-packagejson": "^2.2.15",
     "regenerator-runtime": "^0.13.9",
     "resolve": "^1.20.0",
     "rimraf": "^3.0.2",
@@ -45,13 +54,5 @@
     "umi": "workspace:*",
     "zx": "^4.2.0"
   },
-  "packageManager": "pnpm",
-  "lint-staged": {
-    "*.{jsx,less,md,json}": [
-      "prettier --write"
-    ],
-    "*.ts?(x)": [
-      "prettier --parser=typescript --write"
-    ]
-  }
+  "packageManager": "pnpm"
 }
