--- a/packages/bundler-utils/package.json
+++ b/packages/bundler-utils/package.json
@@ -27,6 +27,7 @@
     "@babel/code-frame": "7.16.0",
     "@babel/core": "7.16.0",
     "@babel/generator": "7.16.0",
+    "@babel/helper-module-imports": "7.16.0",
     "@babel/parser": "7.16.0",
     "@babel/plugin-proposal-decorators": "7.16.0",
     "@babel/plugin-proposal-do-expressions": "7.16.0",
