feat(preset-umi): improve scan process

--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -34,6 +34,7 @@
     "@umijs/server": "4.0.0-beta.8",
     "@umijs/utils": "4.0.0-beta.8",
     "current-script-polyfill": "1.0.0",
+    "enhanced-resolve": "5.8.3",
     "react": "18.0.0-alpha-f2c381131-20211004",
     "react-dom": "18.0.0-alpha-f2c381131-20211004",
     "react-router": "6.0.0-beta.7",
