feat: upgrade svgr to 6 (#195)
* feat: upgrade svgr to 6

* chore: change fixtures config

--- a/packages/bundler-webpack/compiled/@svgr/webpack/package.json
+++ b/packages/bundler-webpack/compiled/@svgr/webpack/package.json
@@ -1,1 +1,1 @@
-{"name":"@svgr/webpack","author":"Greg Bergé <berge.greg@gmail.com>","license":"MIT"}
+{"name":"@svgr/webpack","author":"Greg Bergé <berge.greg@gmail.com>","license":"MIT","typings":"./dist/index.d.ts"}
