--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -35,6 +35,7 @@
     "@umijs/utils": "4.0.0-beta.9",
     "current-script-polyfill": "1.0.0",
     "enhanced-resolve": "5.8.3",
+    "path-to-regexp": "1.7.0",
     "react": "18.0.0-alpha-f2c381131-20211004",
     "react-dom": "18.0.0-alpha-f2c381131-20211004",
     "react-router": "6.0.0-beta.7",
@@ -44,8 +45,7 @@
     "@types/body-parser": "1.19.2",
     "@types/multer": "1.4.7",
     "body-parser": "1.19.0",
-    "multer": "1.4.3",
-    "path-to-regexp": "1.7.0"
+    "multer": "1.4.3"
   },
   "publishConfig": {
     "access": "public"
