--- a/packages/create-umi/package.json
+++ b/packages/create-umi/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@umijs/create-umi",
+  "name": "create-umi",
   "version": "4.0.0-beta.10",
-  "description": "@umijs/create-umi",
+  "description": "create-umi",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/create-umi#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
   "repository": {
@@ -24,7 +24,7 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
-    "@umijs/bundler-utils": "4.0.0-beta.10"
+    "@umijs/utils": "4.0.0-beta.10"
   },
   "publishConfig": {
     "access": "public"
