--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -20,6 +20,7 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
+    "@umijs/utils": "4.0.0-beta.11",
     "antd": "^4.16.13",
     "antd-dayjs-webpack-plugin": "^1.0.6",
     "babel-plugin-import": "^1.13.3",
