dep: upgrade deps

--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "@vercel/ncc": "^0.32.0",
     "dts-packer": "^0.0.2",
     "esbuild-jest": "^0.5.0",
-    "esno": "^0.10.1",
+    "esno": "^0.12.1",
     "git-repo-info": "^2.1.1",
     "husky": "^7.0.4",
-    "jest": "^27.3.1",
+    "jest": "^27.4.3",
     "lerna": "^4.0.0",
-    "lint-staged": "^11.2.3",
+    "lint-staged": "^12.1.2",
     "prettier": "^2.5.0",
     "prettier-plugin-organize-imports": "^2.3.4",
     "prettier-plugin-packagejson": "^2.2.15",
@@ -50,8 +50,8 @@
     "resolve": "^1.20.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.0-beta",
-    "uglify-js": "^3.14.2",
+    "typescript": "^4.5.2",
+    "uglify-js": "^3.14.4",
     "umi": "workspace:*",
     "zx": "^4.2.0"
   },
