--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -7,8 +7,8 @@
     "umi": "4.0.0-beta.11"
   },
   "devDependencies": {
-    "antd": "4.16.13",
-    "framer-motion": "5.0.0",
-    "swr": "1.1.0-beta.8"
+    "antd": "4.17.2",
+    "framer-motion": "5.3.3",
+    "swr": "1.1.0"
   }
 }
