--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -38,8 +38,8 @@
     "path-to-regexp": "1.7.0",
     "react": "18.0.0-alpha-f2c381131-20211004",
     "react-dom": "18.0.0-alpha-f2c381131-20211004",
-    "react-router": "6.0.0-beta.7",
-    "react-router-dom": "6.0.0-beta.7"
+    "react-router": "6.0.2",
+    "react-router-dom": "6.0.2"
   },
   "devDependencies": {
     "@types/body-parser": "1.19.2",
