--- a/packages/utils/compiled/debug/package.json
+++ b/packages/utils/compiled/debug/package.json
@@ -1,1 +1,1 @@
-{"name":"debug","author":"TJ Holowaychuk <tj@vision-media.ca>","license":"MIT"}
+{"name":"debug","author":"Josh Junon <josh.junon@protonmail.com>","license":"MIT"}
