--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -20,11 +20,12 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
-    "@umijs/utils": "4.0.0-beta.11",
+    "@umijs/bundler-utils": "4.0.0-beta.11",
     "antd": "^4.17.2",
     "antd-dayjs-webpack-plugin": "^1.0.6",
     "babel-plugin-import": "^1.13.3",
-    "dayjs": "^1.10.7"
+    "dayjs": "^1.10.7",
+    "dva": "^2.6.0-beta.22"
   },
   "devDependencies": {
     "umi": "4.0.0-beta.11"
