--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -29,6 +29,9 @@
   },
   "dependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
+    "@svgr/core": "6.0.0",
+    "@svgr/plugin-jsx": "^6.1.0",
+    "@svgr/plugin-svgo": "^6.1.0",
     "@swc/core": "1.2.117",
     "@types/hapi__joi": "17.1.7",
     "@umijs/babel-preset-umi": "4.0.0-beta.11",
@@ -43,7 +46,6 @@
     "react-error-overlay": "6.0.9"
   },
   "devDependencies": {
-    "@svgr/webpack": "6.0.0",
     "@types/express": "4.17.13",
     "@types/webpack-sources": "3.2.0",
     "@types/ws": "8.2.1",
@@ -88,7 +90,6 @@
   ],
   "compiledConfig": {
     "deps": [
-      "@svgr/webpack",
       "autoprefixer",
       "babel-loader",
       "copy-webpack-plugin",
@@ -159,7 +160,6 @@
       "webpack"
     ],
     "excludeDtsDeps": [
-      "@svgr/webpack",
       "babel-loader",
       "copy-webpack-plugin",
       "css-loader",
