--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preinstall": "esno scripts/checkNpmClient.ts",
     "prepare": "husky install",
     "release": "esno scripts/release.ts",
+    "setup:webstorm": "esno scripts/setupWebStorm.ts",
     "test": "jest",
     "test:clean": "jest --clearCache",
     "tsc:check": "tsc --noEmit"
