--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -7,6 +7,7 @@
     "umi": "4.0.0-beta.11"
   },
   "devDependencies": {
+    "@codesandbox/sandpack-react": "0.9.10",
     "antd": "4.17.2",
     "framer-motion": "5.3.3",
     "swr": "1.1.0"
