feat: update babel

--- a/packages/deps/package.json
+++ b/packages/deps/package.json
@@ -44,30 +44,32 @@
     "prettier": "2.2.1"
   },
   "devDependencies": {
-    "@babel/code-frame": "7.12.13",
-    "@babel/core": "7.14.0",
-    "@babel/generator": "7.14.1",
-    "@babel/parser": "7.14.1",
-    "@babel/plugin-proposal-class-properties": "7.13.0",
-    "@babel/plugin-proposal-decorators": "7.13.15",
-    "@babel/plugin-proposal-do-expressions": "7.14.0",
-    "@babel/plugin-proposal-export-default-from": "7.12.13",
-    "@babel/plugin-proposal-function-bind": "7.12.13",
-    "@babel/plugin-proposal-logical-assignment-operators": "7.13.8",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.13.8",
-    "@babel/plugin-proposal-optional-chaining": "7.13.12",
-    "@babel/plugin-proposal-pipeline-operator": "7.12.13",
-    "@babel/plugin-proposal-record-and-tuple": "7.13.0",
-    "@babel/plugin-syntax-top-level-await": "7.12.13",
-    "@babel/plugin-transform-destructuring": "7.13.17",
-    "@babel/plugin-transform-runtime": "7.13.15",
-    "@babel/preset-env": "7.14.1",
-    "@babel/preset-react": "7.13.13",
-    "@babel/preset-typescript": "7.13.0",
-    "@babel/register": "7.13.16",
-    "@babel/template": "7.12.13",
-    "@babel/traverse": "7.14.0",
-    "@babel/types": "7.14.1",
+    "@babel/code-frame": "7.16.0",
+    "@babel/core": "7.16.0",
+    "@babel/generator": "7.16.0",
+    "@babel/parser": "7.16.4",
+    "@babel/plugin-proposal-class-properties": "7.16.0",
+    "@babel/plugin-proposal-decorators": "7.16.4",
+    "@babel/plugin-proposal-do-expressions": "7.16.0",
+    "@babel/plugin-proposal-export-default-from": "7.16.0",
+    "@babel/plugin-proposal-function-bind": "7.16.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "7.16.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.16.0",
+    "@babel/plugin-proposal-optional-chaining": "7.16.0",
+    "@babel/plugin-proposal-pipeline-operator": "7.16.0",
+    "@babel/plugin-proposal-private-property-in-object": "7.16.0",
+    "@babel/plugin-proposal-private-methods": "^7.16.0",
+    "@babel/plugin-proposal-record-and-tuple": "7.16.0",
+    "@babel/plugin-syntax-top-level-await": "7.14.5",
+    "@babel/plugin-transform-destructuring": "7.16.0",
+    "@babel/plugin-transform-runtime": "7.16.4",
+    "@babel/preset-env": "7.16.4",
+    "@babel/preset-react": "7.16.0",
+    "@babel/preset-typescript": "7.16.0",
+    "@babel/register": "7.16.0",
+    "@babel/template": "7.16.0",
+    "@babel/traverse": "7.16.3",
+    "@babel/types": "7.16.0",
     "@hapi/joi": "16.1.8",
     "@svgr/webpack": "4.3.3",
     "@taskr/clear": "1.1.0",
@@ -111,7 +113,7 @@
     "@vercel/ncc": "0.28.5",
     "address": "1.1.2",
     "ansi-html": "0.0.7",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.3",
     "babel-plugin-dynamic-import-node": "2.3.3",
     "babel-plugin-import": "1.13.3",
     "babel-plugin-named-asset-import": "0.3.7",
