--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -35,6 +35,7 @@
     "@umijs/utils": "4.0.0-beta.11",
     "current-script-polyfill": "1.0.0",
     "enhanced-resolve": "5.8.3",
+    "magic-string": "0.25.7",
     "path-to-regexp": "1.7.0",
     "react": "18.0.0-alpha-f2c381131-20211004",
     "react-dom": "18.0.0-alpha-f2c381131-20211004",
@@ -45,7 +46,8 @@
     "@types/body-parser": "1.19.2",
     "@types/multer": "1.4.7",
     "body-parser": "1.19.0",
-    "multer": "1.4.3"
+    "multer": "1.4.3",
+    "vite": "2.6.13"
   },
   "publishConfig": {
     "access": "public"
