--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@codesandbox/sandpack-react": "0.9.10",
     "antd": "4.17.2",
+    "fast-deep-equal": "3.1.3",
     "framer-motion": "5.3.3",
     "swr": "1.1.0"
   }
