--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -25,7 +25,8 @@
     "antd-dayjs-webpack-plugin": "^1.0.6",
     "babel-plugin-import": "^1.13.3",
     "dayjs": "^1.10.7",
-    "dva": "^2.6.0-beta.22"
+    "dva": "^2.6.0-beta.22",
+    "fast-deep-equal": "3.1.3"
   },
   "devDependencies": {
     "umi": "4.0.0-beta.12"
