--- a/packages/renderer-react/package.json
+++ b/packages/renderer-react/package.json
@@ -26,8 +26,8 @@
     "react-router-dom": "6.0.2"
   },
   "devDependencies": {
-    "react": "18.0.0-alpha-f2c381131-20211004",
-    "react-dom": "18.0.0-alpha-f2c381131-20211004"
+    "react": "18.0.0-rc.0",
+    "react-dom": "18.0.0-rc.0"
   },
   "peerDependencies": {
     "react": ">=16.8",
