--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,8 +21,8 @@
   },
   "dependencies": {
     "history": "5.1.0",
-    "react": "18.0.0-alpha-4298ddbc5-20211023",
-    "react-dom": "18.0.0-alpha-4298ddbc5-20211023",
+    "react": "18.0.0-rc.0",
+    "react-dom": "18.0.0-rc.0",
     "react-router-dom": "6.0.2"
   },
   "devDependencies": {
