--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -20,6 +20,7 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
+    "@ant-design/pro-layout": "^6.31.7",
     "@umijs/bundler-utils": "4.0.0-beta.12",
     "antd": "^4.17.2",
     "antd-dayjs-webpack-plugin": "^1.0.6",
