--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -9,8 +9,11 @@
   "devDependencies": {
     "@codesandbox/sandpack-react": "0.9.10",
     "antd": "4.17.2",
+    "dva-core": "^2.0.4",
     "fast-deep-equal": "3.1.3",
     "framer-motion": "5.3.3",
+    "react-redux": "^8.0.0-beta.1",
+    "redux": "^4.1.2",
     "swr": "1.1.0"
   }
 }
