--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -26,8 +26,10 @@
     "antd-dayjs-webpack-plugin": "^1.0.6",
     "babel-plugin-import": "^1.13.3",
     "dayjs": "^1.10.7",
-    "dva": "^2.6.0-beta.22",
-    "fast-deep-equal": "3.1.3"
+    "dva-core": "^2.0.4",
+    "fast-deep-equal": "3.1.3",
+    "react-redux": "^8.0.0-beta.1",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "umi": "4.0.0-beta.12"
