fix(renderer-react): route rerender when location changes

--- a/examples/bundler-webpack-demo/package.json
+++ b/examples/bundler-webpack-demo/package.json
@@ -9,7 +9,9 @@
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "react": "^18.0.0-alpha-fd5e01c2e-20210913",
-    "react-dom": "^18.0.0-alpha-fd5e01c2e-20210913"
+    "history": "^5.1.0",
+    "react": "^18.0.0-rc.0",
+    "react-dom": "^18.0.0-rc.0",
+    "react-router-dom": "^6.1.1"
   }
 }
