--- a/examples/bigfish/package.json
+++ b/examples/bigfish/package.json
@@ -4,6 +4,9 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "bigfish": "4.0.0-beta.12"
+    "@ant-design/icons": "^4.7.0",
+    "bigfish": "4.0.0-beta.12",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
