--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -22,13 +22,13 @@
   "dependencies": {
     "@ant-design/pro-layout": "^6.31.7",
     "@umijs/bundler-utils": "4.0.0-beta.12",
-    "antd": "^4.17.2",
+    "antd": "^4.17.3",
     "antd-dayjs-webpack-plugin": "^1.0.6",
     "babel-plugin-import": "^1.13.3",
     "dayjs": "^1.10.7",
     "dva-core": "^2.0.4",
     "fast-deep-equal": "3.1.3",
-    "react-redux": "^8.0.0-beta.1",
+    "react-redux": "^7.2.6",
     "redux": "^4.1.2"
   },
   "devDependencies": {
