--- a/packages/bundler-esbuild/package.json
+++ b/packages/bundler-esbuild/package.json
@@ -26,7 +26,8 @@
     "@umijs/bundler-utils": "4.0.0-beta.12",
     "@umijs/utils": "4.0.0-beta.12",
     "enhanced-resolve": "5.8.3",
-    "less": "4.1.2"
+    "less": "4.1.2",
+    "less-plugin-aliases": "^1.0.3"
   },
   "devDependencies": {
     "@types/less": "^3.0.3"
