--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -21,6 +21,7 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-layout": "^6.31.7",
     "@umijs/bundler-utils": "4.0.0-beta.12",
     "antd": "^4.17.3",
