--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -32,8 +32,11 @@
     "dayjs": "^1.10.7",
     "dva-core": "^2.0.4",
     "fast-deep-equal": "3.1.3",
+    "moment": "^2.29.1",
+    "react-intl": "3.12.1",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "warning": "^4.0.3"
   },
   "devDependencies": {
     "umi": "4.0.0-beta.13"
