--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-import": "^1.13.3",
     "dayjs": "^1.10.7",
     "dva-core": "^2.0.4",
+    "event-emitter": "~0.3.5",
     "fast-deep-equal": "3.1.3",
     "moment": "^2.29.1",
     "react-intl": "3.12.1",
