feat: bundler-esbuild postcss (#220)
* feat: bundler-esbuild postcss

* Update packages/bundler-webpack/src/dev.ts

Co-authored-by: chencheng (云谦) <sorrycc@gmail.com>

* Update packages/mfsu/src/mfsu.ts

Co-authored-by: chencheng (云谦) <sorrycc@gmail.com>

* chore: types

* chore: simplify depBuildConfig

Co-authored-by: chencheng (云谦) <sorrycc@gmail.com>

--- a/packages/bundler-esbuild/package.json
+++ b/packages/bundler-esbuild/package.json
@@ -27,9 +27,13 @@
     "@umijs/utils": "4.0.0-beta.13",
     "enhanced-resolve": "5.8.3",
     "less": "4.1.2",
-    "less-plugin-aliases": "^1.0.3"
+    "less-plugin-aliases": "^1.0.3",
+    "postcss": "^8.4.4",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-preset-env": "7.0.1"
   },
   "devDependencies": {
+    "@alitajs/postcss-plugin-px2rem": "^0.0.1",
     "@types/less": "^3.0.3"
   },
   "publishConfig": {
