--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -33,7 +33,9 @@
     "dva-core": "^2.0.4",
     "event-emitter": "~0.3.5",
     "fast-deep-equal": "3.1.3",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "qiankun": "^2.6.3",
     "react-intl": "3.12.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
