Feat umijs test (#113)
* feat: init @umijs/test

* feat: add util mergeConfig

* feat: createJestConfig

* chore: code style

* feat: support assets

* docs: add usage and faq

* feat: add test

* feat: support use import in node_modules

* feat: setTimeout and remove isLerna config

* chore: remove isLerna config

* feat: umi-next test use @umijs/test

* feat: no e2e test

--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "@umijs/bundler-webpack": "workspace:*",
     "@umijs/plugins": "workspace:*",
     "@umijs/server": "workspace:*",
+    "@umijs/test": "workspace:*",
     "@umijs/utils": "workspace:*",
     "@vercel/ncc": "^0.33.0",
     "dts-packer": "^0.0.2",
-    "esbuild-jest": "^0.5.0",
     "esno": "^0.12.1",
     "git-repo-info": "^2.1.1",
     "husky": "^7.0.4",
