--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "build": "pnpm -r --filter ./packages run build",
     "build:release": "pnpm -r --filter ./packages run build -- --declarationMap false",
     "check:packageFiles": "esno scripts/checkPackageFiles.ts",
-    "dep:update": "esno scripts/checkNpmClient.ts && pnpm up --interactive --latest --recursive",
+    "dep:update": "npx only-allow pnpm && pnpm up --interactive --latest --recursive",
     "dev": "pnpm -r --filter ./packages --parallel run dev",
     "format": "prettier --write .",
-    "preinstall": "esno scripts/checkNpmClient.ts",
+    "preinstall": "npx only-allow pnpm",
     "prepare": "husky install",
     "release": "esno scripts/release.ts",
     "setup:webstorm": "esno scripts/setupWebStorm.ts",
@@ -45,6 +45,7 @@
     "jest": "^27.4.3",
     "lerna": "^4.0.0",
     "lint-staged": "^12.1.2",
+    "only-allow": "^1.0.0",
     "prettier": "^2.5.1",
     "prettier-plugin-organize-imports": "^2.3.4",
     "prettier-plugin-packagejson": "^2.2.15",
