refactor: bigfish > @umijs/pro

--- a/examples/bigfish/package.json
+++ b/examples/bigfish/package.json
@@ -1,11 +1,11 @@
 {
   "scripts": {
-    "dev": "bigfish dev",
+    "dev": "umipro dev",
     "start": "npm run dev"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "bigfish": "4.0.0-beta.15",
+    "@umijs/pro": "4.0.0-beta.15",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
