--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "5.3.3",
     "react-redux": "^8.0.0-beta.1",
     "redux": "^4.1.2",
+    "swiper": "^7.4.1",
     "swr": "1.1.0"
   }
 }
