feat(bundler-webpack): support forkTSChecker

--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -57,6 +57,7 @@
     "css-minimizer-webpack-plugin": "3.1.1",
     "cssnano": "5.0.8",
     "express": "4.17.1",
+    "fork-ts-checker-webpack-plugin": "6.5.0",
     "http-proxy-middleware": "2.0.1",
     "less": "4.1.2",
     "less-loader": "10.2.0",
@@ -98,6 +99,7 @@
       "compression",
       "connect-history-api-fallback",
       "express",
+      "fork-ts-checker-webpack-plugin",
       "http-proxy-middleware",
       "less",
       "less-loader",
@@ -135,6 +137,7 @@
       "tapable": "$$LOCAL",
       "terser": "$$LOCAL",
       "terser-webpack-plugin": "$$LOCAL",
+      "typescript": "typescript",
       "uglify-js": "uglify-js",
       "url-loader": "$$LOCAL",
       "webpack": "$$LOCAL",
