--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -33,6 +33,7 @@
     "@umijs/renderer-react": "4.0.0-beta.15",
     "@umijs/server": "4.0.0-beta.15",
     "@umijs/utils": "4.0.0-beta.15",
+    "core-js": "3.19.2",
     "current-script-polyfill": "1.0.0",
     "enhanced-resolve": "5.8.3",
     "magic-string": "0.25.7",
