example(ant-design-pro): fix querystring problem

--- a/examples/ant-design-pro/package.json
+++ b/examples/ant-design-pro/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
+    "querystring": "^0.2.1",
     "rc-util": "^5.16.1"
   }
 }
