feat: use react 17

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@umijs/utils": "workspace:*",
     "@vercel/ncc": "^0.33.0",
     "dts-packer": "^0.0.2",
+    "esbuild": "^0.14.11",
     "esbuild-jest": "^0.5.0",
     "esno": "^0.12.1",
     "git-repo-info": "^2.1.1",
@@ -49,6 +50,8 @@
     "prettier": "^2.5.1",
     "prettier-plugin-organize-imports": "^2.3.4",
     "prettier-plugin-packagejson": "^2.2.15",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "regenerator-runtime": "^0.13.9",
     "resolve": "^1.20.0",
     "rimraf": "^3.0.2",
