--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -38,8 +38,8 @@
     "enhanced-resolve": "5.8.3",
     "magic-string": "0.25.7",
     "path-to-regexp": "1.7.0",
-    "react": "18.0.0-rc.0",
-    "react-dom": "18.0.0-rc.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-router": "6.1.1",
     "react-router-dom": "6.1.1"
   },
