--- a/packages/renderer-react/package.json
+++ b/packages/renderer-react/package.json
@@ -26,8 +26,8 @@
     "react-router-dom": "6.1.1"
   },
   "devDependencies": {
-    "react": "18.0.0-rc.0",
-    "react-dom": "18.0.0-rc.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "peerDependencies": {
     "react": ">=16.8",
