--- a/examples/ant-design-pro/package.json
+++ b/examples/ant-design-pro/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.10.7",
     "gg-editor": "2.0.2",
     "lodash": "^4.17.21",
+    "mockjs": "^1.1.0",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "querystring": "^0.2.1",
