example(ant-design-pro): add monaco-editor

--- a/examples/ant-design-pro/package.json
+++ b/examples/ant-design-pro/package.json
@@ -20,6 +20,8 @@
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "moment": "^2.29.1",
+    "monaco-editor": "^0.31.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "numeral": "^2.0.6",
     "querystring": "^0.2.1",
     "rc-util": "^5.16.1"
