feat(plugin-docs): new plugin for docs

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,6 @@
 /packages/*/src/**/fixtures/*/dist
 /packages/*/src/**/fixtures/*/.umi
 /packages/*/src/**/fixtures/*/.umi-production
+/.umi
+/.mfsu
 .DS_Store
