--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "check:packageFiles": "esno scripts/checkPackageFiles.ts",
     "dep:update": "npx only-allow pnpm && pnpm up --interactive --latest --recursive",
     "dev": "pnpm -r --filter ./packages --parallel run dev",
+    "doc:dev": "npx umi dev",
     "format": "prettier --write .",
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install",
@@ -33,6 +34,7 @@
     "@umijs/bundler-utils": "workspace:*",
     "@umijs/bundler-vite": "workspace:*",
     "@umijs/bundler-webpack": "workspace:*",
+    "@umijs/plugin-docs": "workspace:*",
     "@umijs/plugins": "workspace:*",
     "@umijs/server": "workspace:*",
     "@umijs/utils": "workspace:*",
