--- a/packages/plugin-docs/package.json
+++ b/packages/plugin-docs/package.json
@@ -21,7 +21,8 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
-    "@mdx-js/mdx": "1.6.22"
+    "@mdx-js/mdx": "1.6.22",
+    "classnames": "^2.3.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.0.15",
