--- a/examples/mfsu-independent/package.json
+++ b/examples/mfsu-independent/package.json
@@ -1,8 +1,10 @@
 {
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "start": "npm run dev"
   },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
