feat(plugin-docs): Added anchor for headings, let TOC can link to them (#304)
* feat(plugin-docs): Added anchor for headings, let TOC can link to them

* feat(plugin-docs): use remark-slug instead of regex replace for heading anchors

* feat(plugin-docs): remove unused title declaration

--- a/packages/plugin-docs/package.json
+++ b/packages/plugin-docs/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@mdx-js/mdx": "1.6.22",
-    "classnames": "^2.3.1"
+    "remark-slug": "6.1.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.0.15",
