--- a/packages/plugin-docs/package.json
+++ b/packages/plugin-docs/package.json
@@ -22,9 +22,11 @@
   },
   "dependencies": {
     "@mdx-js/mdx": "1.6.22",
+    "keymaster": "^1.6.2",
     "remark-slug": "6.1.0"
   },
   "devDependencies": {
+    "@types/keymaster": "^1.6.30",
     "classnames": "^2.3.1",
     "tailwindcss": "^3.0.15",
     "umi": "4.0.0-beta.17"
