--- a/packages/deps/package.json
+++ b/packages/deps/package.json
@@ -68,6 +68,7 @@
     "@babel/template": "7.12.13",
     "@babel/traverse": "7.14.0",
     "@babel/types": "7.14.1",
+    "@emotion/babel-plugin": "^11.7.2",
     "@hapi/joi": "16.1.8",
     "@svgr/webpack": "4.3.3",
     "@taskr/clear": "1.1.0",
