fix(pro): exports, Close #329, Close #328

--- a/packages/pro/package.json
+++ b/packages/pro/package.json
@@ -10,8 +10,7 @@
   },
   "license": "MIT",
   "main": "dist/index.js",
-  "module": "index.esm.js",
-  "types": "index.d.ts",
+  "types": "dist/index.d.ts",
   "bin": {
     "umipro": "bin/pro.js"
   },
