chore(swc): improve swc loader polyfill (#331)
* chore(swc-loader): improve swc usage polyfill

* chore(mfsu): mfsu disabled on swc transpiler

* example(swc): specified config for check output polyfill

* chore(swc): warning tip for use with mfsu

--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -41,7 +41,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router": "6.1.1",
-    "react-router-dom": "6.1.1"
+    "react-router-dom": "6.1.1",
+    "regenerator-runtime": "0.13.9"
   },
   "devDependencies": {
     "@types/body-parser": "1.19.2",
