--- a/examples/react-three-fiber/package.json
+++ b/examples/react-three-fiber/package.json
@@ -9,7 +9,7 @@
     "@react-three/fiber": "^7.0.24",
     "three": "^0.136.0",
     "troika-three-text": "^0.45.0",
-    "umi": "4.0.0-beta.18"
+    "umi": "4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/three": "^0.136.1"
