--- a/examples/with-unocss/package.json
+++ b/examples/with-unocss/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@umijs/plugins": "4.0.0-beta.16",
     "@unocss/cli": "^0.22.4",
-    "umi": "4.0.0-beta.18",
+    "umi": "4.0.0-rc.1",
     "unocss": "^0.22.4"
   }
 }
