--- a/examples/mfsu-independent/package.json
+++ b/examples/mfsu-independent/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "build": "webpack",
     "dev": "webpack serve --config webpack.config.js",
-    "dev:esbuild": "webpack serve --config webpack.config.esbuild.js"
+    "dev:esbuild": "webpack serve --config webpack.config.esbuild.js",
+    "start": "npm run dev"
   },
   "dependencies": {},
   "devDependencies": {
