--- a/examples/qiankun-slave/package.json
+++ b/examples/qiankun-slave/package.json
@@ -5,7 +5,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/pro": "4.0.0-beta.18",
+    "@umijs/pro": "4.0.0-rc.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
