--- a/examples/with-valtio/package.json
+++ b/examples/with-valtio/package.json
@@ -5,7 +5,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "umi": "4.0.0-beta.18",
+    "umi": "4.0.0-rc.1",
     "valtio": "^1.2.9"
   },
   "devDependencies": {
