--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/bundler-webpack",
-  "version": "4.0.0-beta.18",
+  "version": "4.0.0-rc.1",
   "description": "@umijs/bundler-webpack",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/bundler-webpack#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -34,9 +34,9 @@
     "@svgr/plugin-svgo": "^6.1.0",
     "@swc/core": "1.2.117",
     "@types/hapi__joi": "17.1.7",
-    "@umijs/babel-preset-umi": "4.0.0-beta.18",
-    "@umijs/mfsu": "4.0.0-beta.18",
-    "@umijs/utils": "4.0.0-beta.18",
+    "@umijs/babel-preset-umi": "4.0.0-rc.1",
+    "@umijs/mfsu": "4.0.0-rc.1",
+    "@umijs/utils": "4.0.0-rc.1",
     "css-loader": "6.5.1",
     "es5-imcompatible-versions": "^0.1.73",
     "jest-worker": "27.4.2",
