--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/plugins",
-  "version": "4.0.0-beta.18",
+  "version": "4.0.0-rc.1",
   "description": "@umijs/plugins",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/plugins#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -24,7 +24,7 @@
     "@ahooksjs/use-request": "^2.0.0",
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-layout": "^6.31.7",
-    "@umijs/bundler-utils": "4.0.0-beta.18",
+    "@umijs/bundler-utils": "4.0.0-rc.1",
     "antd": "^4.17.3",
     "antd-dayjs-webpack-plugin": "^1.0.6",
     "axios": "^0.24.0",
@@ -42,7 +42,7 @@
     "warning": "^4.0.3"
   },
   "devDependencies": {
-    "umi": "4.0.0-beta.18"
+    "umi": "4.0.0-rc.1"
   },
   "publishConfig": {
     "access": "public"
