--- a/packages/pro/package.json
+++ b/packages/pro/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/pro",
-  "version": "4.0.0-beta.18",
+  "version": "4.0.0-rc.1",
   "description": "@umijs/pro",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/pro#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -26,8 +26,8 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
-    "@umijs/plugins": "4.0.0-beta.18",
-    "umi": "4.0.0-beta.18"
+    "@umijs/plugins": "4.0.0-rc.1",
+    "umi": "4.0.0-rc.1"
   },
   "publishConfig": {
     "access": "public"
