--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi",
-  "version": "4.0.0-beta.18",
+  "version": "4.0.0-rc.1",
   "description": "umi",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/umi#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -32,10 +32,10 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
-    "@umijs/core": "4.0.0-beta.18",
-    "@umijs/preset-umi": "4.0.0-beta.18",
-    "@umijs/renderer-react": "4.0.0-beta.18",
-    "@umijs/utils": "4.0.0-beta.18",
+    "@umijs/core": "4.0.0-rc.1",
+    "@umijs/preset-umi": "4.0.0-rc.1",
+    "@umijs/renderer-react": "4.0.0-rc.1",
+    "@umijs/utils": "4.0.0-rc.1",
     "v8-compile-cache": "2.3.0"
   },
   "publishConfig": {
