--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "check:packageFiles": "esno scripts/checkPackageFiles.ts",
     "dep:update": "npx only-allow pnpm && pnpm up --interactive --latest --recursive",
     "dev": "pnpm -r --filter ./packages --parallel run dev",
-    "doc:dev": "npx umi dev",
+    "doc:dev": "esno scripts/startDocsSite.ts",
     "format": "prettier --write .",
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install",
