--- a/packages/bundler-webpack/compiled/css-minimizer-webpack-plugin/package.json
+++ b/packages/bundler-webpack/compiled/css-minimizer-webpack-plugin/package.json
@@ -1,1 +1,1 @@
-{"name":"css-minimizer-webpack-plugin","author":"Loann Neveu","license":"MIT"}
+{"name":"css-minimizer-webpack-plugin","author":"Loann Neveu","license":"MIT","types":"types/index.d.ts"}
