dep: upgrade webpack to 5.68

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "doc:dev": "esno scripts/startDocsSite.ts",
     "format": "prettier --write .",
     "preinstall": "npx only-allow pnpm",
+    "postinstall": "esno scripts/postinstall.ts",
     "prepare": "husky install",
     "release": "esno scripts/release.ts",
     "setup:webstorm": "esno scripts/setupWebStorm.ts",
@@ -39,16 +40,16 @@
     "@umijs/plugins": "workspace:*",
     "@umijs/server": "workspace:*",
     "@umijs/utils": "workspace:*",
-    "@vercel/ncc": "^0.33.1",
+    "@vercel/ncc": "0.33.0",
     "dts-packer": "^0.0.2",
     "esbuild": "^0.14.20",
     "esbuild-jest": "^0.5.0",
     "esno": "^0.14.1",
     "git-repo-info": "^2.1.1",
     "husky": "^7.0.4",
-    "jest": "^27.4.7",
+    "jest": "^27.5.0",
     "lerna": "^4.0.0",
-    "lint-staged": "^12.1.2",
+    "lint-staged": "^12.3.3",
     "only-allow": "^1.0.0",
     "prettier": "^2.5.1",
     "prettier-plugin-organize-imports": "^2.3.4",
@@ -56,11 +57,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "^0.13.9",
-    "resolve": "^1.20.0",
+    "resolve": "^1.22.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
-    "uglify-js": "^3.14.4",
+    "uglify-js": "^3.15.1",
     "umi": "workspace:*",
     "zx": "^4.3.0"
   },
