--- a/packages/bundler-webpack/compiled/mini-css-extract-plugin/package.json
+++ b/packages/bundler-webpack/compiled/mini-css-extract-plugin/package.json
@@ -1,1 +1,1 @@
-{"name":"mini-css-extract-plugin","author":"Tobias Koppers @sokra","license":"MIT"}
+{"name":"mini-css-extract-plugin","author":"Tobias Koppers @sokra","license":"MIT","types":"types/index.d.ts"}
