--- a/packages/bundler-webpack/compiled/terser-webpack-plugin/package.json
+++ b/packages/bundler-webpack/compiled/terser-webpack-plugin/package.json
@@ -1,1 +1,1 @@
-{"name":"terser-webpack-plugin","author":"webpack Contrib Team","license":"MIT","types":"types/cjs.d.ts"}
+{"name":"terser-webpack-plugin","author":"webpack Contrib Team","license":"MIT","types":"types/index.d.ts"}
