--- a/examples/bundler-vite-demo/package.json
+++ b/examples/bundler-vite-demo/package.json
@@ -4,12 +4,10 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "umi": "4.0.0-rc.1"
-  },
-  "devDependencies": {
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "umi": "4.0.0-rc.1"
   }
 }
