--- a/examples/bundler-webpack-demo/package.json
+++ b/examples/bundler-webpack-demo/package.json
@@ -4,14 +4,12 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "umi": "4.0.0-rc.1"
-  },
-  "devDependencies": {
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "history": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "umi": "4.0.0-rc.1"
   }
 }
