--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -4,9 +4,6 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "umi": "4.0.0-rc.1"
-  },
-  "devDependencies": {
     "@codesandbox/sandpack-react": "0.13.14",
     "antd": "4.18.6",
     "dva-core": "^2.0.4",
@@ -14,7 +11,8 @@
     "framer-motion": "6.2.4",
     "react-redux": "^8.0.0-beta.1",
     "redux": "^4.1.2",
-    "swiper": "^8.0.3",
-    "swr": "1.2.1"
+    "swiper": "^8.0.5",
+    "swr": "1.2.1",
+    "umi": "4.0.0-rc.1"
   }
 }
