--- a/examples/react-three-fiber/package.json
+++ b/examples/react-three-fiber/package.json
@@ -7,11 +7,9 @@
   "dependencies": {
     "@react-three/drei": "^8.8.4",
     "@react-three/fiber": "^7.0.26",
+    "@types/three": "^0.137.0",
     "three": "^0.137.5",
     "troika-three-text": "^0.45.0",
     "umi": "4.0.0-rc.1"
-  },
-  "devDependencies": {
-    "@types/three": "^0.137.0"
   }
 }
