--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,16 +27,18 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
           registry-url: 'https://registry.npmjs.org/'
-      - name: Cache .pnpm-store
-        id: cache
-        uses: actions/cache@v1
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
         with:
           path: ~/.pnpm-store
           key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-node${{ matrix.node-version }}-
       - name: Install pnpm
-        run: npm i pnpm -g
-      - name: install
-        run: pnpm install
+        uses: pnpm/action-setup@v2.1.0
+        with:
+          version: latest
+          run_install: true
       - run: pnpm build
       - run: pnpm tsc --noEmit
       - run: pnpm test
