--- a/examples/bundler-vite-demo/package.json
+++ b/examples/bundler-vite-demo/package.json
@@ -4,6 +4,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "@umijs/bundler-vite": "4.0.0-rc.1",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
