--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -34,8 +34,7 @@
     "@umijs/core": "4.0.0-rc.1",
     "@umijs/preset-umi": "4.0.0-rc.1",
     "@umijs/renderer-react": "4.0.0-rc.1",
-    "@umijs/utils": "4.0.0-rc.1",
-    "v8-compile-cache": "2.3.0"
+    "@umijs/utils": "4.0.0-rc.1"
   },
   "publishConfig": {
     "access": "public"
