--- a/packages/plugin-docs/package.json
+++ b/packages/plugin-docs/package.json
@@ -23,13 +23,13 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
-    "@mdx-js/mdx": "2.0.0",
-    "keymaster": "1.6.2",
-    "rehype-slug": "5.0.1"
+    "keymaster": "1.6.2"
   },
   "devDependencies": {
+    "@mdx-js/mdx": "2.0.0",
     "@types/keymaster": "^1.6.30",
     "classnames": "^2.3.1",
+    "rehype-slug": "5.0.1",
     "tailwindcss": "^3.0.22",
     "umi": "4.0.0-rc.1"
   },
@@ -38,5 +38,16 @@
   },
   "authors": [
     "chencheng <sorrycc@gmail.com> (https://github.com/sorrycc)"
-  ]
+  ],
+  "compiledConfig": {
+    "deps": [
+      "@mdx-js/mdx",
+      "rehype-slug"
+    ],
+    "externals": {},
+    "excludeDtsDeps": [
+      "@mdx-js/mdx",
+      "rehype-slug"
+    ]
+  }
 }
