feat: plugins support windows

--- a/examples/ant-design-pro/package.json
+++ b/examples/ant-design-pro/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "ANT_DESIGN_PRO_ONLY_DO_NOT_USE_IN_YOUR_PRODUCTION='site' umipro dev",
+    "dev": "umipro dev",
     "start": "npm run dev"
   },
   "dependencies": {
