--- a/packages/plugin-docs/package.json
+++ b/packages/plugin-docs/package.json
@@ -23,11 +23,13 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
-    "keymaster": "1.6.2"
+    "keymaster": "1.6.2",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@mdx-js/mdx": "2.0.0",
     "@types/keymaster": "^1.6.30",
+    "@types/react-helmet": "^6.1.5",
     "classnames": "^2.3.1",
     "rehype-slug": "5.0.1",
     "tailwindcss": "^3.0.23",
