chore(env): ensure pnpm and node min version (#376)

--- a/package.json
+++ b/package.json
@@ -65,5 +65,9 @@
     "umi": "workspace:*",
     "zx": "^4.3.0"
   },
-  "packageManager": "pnpm"
+  "engines": {
+    "node": ">=16",
+    "pnpm": ">=6.20.0"
+  },
+  "packageManager": "pnpm@6.20.0"
 }
