--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -34,6 +34,7 @@
     "@umijs/core": "4.0.0-rc.2",
     "@umijs/preset-umi": "4.0.0-rc.2",
     "@umijs/renderer-react": "4.0.0-rc.2",
+    "@umijs/test": "4.0.0-rc.2",
     "@umijs/utils": "4.0.0-rc.2"
   },
   "publishConfig": {
