feat(bundler-vite): support legacy browsers (#314)
* feat(bundler-vite): add compatibility

* feat(bundler-vite): add compatibility2.0

* feat(bundler-vite): fix Polyfill and add target exit judge

* feat(bundler-vite): add legacyBrowser judge

* feat(bundler-vite): fix symbol erro

* feat(bundler-vite): Supplementary Judgment Conditions

* feat(bundler-vite): fix error

* feat(bundler-vite): fix test errors

* feat(bundler-vite): add caniuse-lite

* feat(bundler-vite): fix conflict

* feat(bundler-vite): add pnpm-lock

* feat(bundler-vite): add detail correction

* feat(bundler-vite): modify type name

* feat(bundler-vite): fix doc

* feat(bundler-vite): fix targets type

* feat(bundler-vite): fix getbrowserlis type

--- a/packages/bundler-vite/package.json
+++ b/packages/bundler-vite/package.json
@@ -29,6 +29,7 @@
     "@umijs/utils": "4.0.0-rc.3",
     "@vitejs/plugin-legacy": "1.7.1",
     "@vitejs/plugin-react": "1.2.0",
+    "caniuse-lite": "1.0.30001309",
     "postcss-preset-env": "7.4.1",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-polyfill": "3.0.0",
@@ -36,6 +37,7 @@
     "vite": "2.8.4"
   },
   "devDependencies": {
+    "@types/caniuse-lite": "1.0.1",
     "express": "4.17.3"
   },
   "publishConfig": {
