--- a/examples/ant-design-pro/package.json
+++ b/examples/ant-design-pro/package.json
@@ -6,16 +6,16 @@
   "dependencies": {
     "@ant-design/charts": "^1.3.5",
     "@ant-design/icons": "4.7.0",
-    "@ant-design/pro-descriptions": "^1.10.45",
-    "@ant-design/pro-form": "^1.54.0",
-    "@ant-design/pro-layout": "6.33.0",
-    "@ant-design/pro-table": "^2.64.0",
+    "@ant-design/pro-descriptions": "^1.10.47",
+    "@ant-design/pro-form": "^1.55.1",
+    "@ant-design/pro-layout": "7.0.1-beta.2",
+    "@ant-design/pro-table": "^2.65.0",
     "@antv/l7-react": "^2.3.9",
     "@umijs/pro": "4.0.0-rc.3",
     "ahooks": "^3.1.10",
-    "antd": "4.18.8",
+    "antd": "4.18.9",
     "classnames": "^2.3.1",
-    "dayjs": "^1.10.7",
+    "dayjs": "^1.10.8",
     "gg-editor": "3.1.3",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
