--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -23,13 +23,13 @@
   "dependencies": {
     "@ahooksjs/use-request": "^2.0.0",
     "@ant-design/icons": "^4.7.0",
-    "@ant-design/pro-layout": "^6.33.0",
+    "@ant-design/pro-layout": "^7.0.1-beta.2",
     "@umijs/bundler-utils": "4.0.0-rc.3",
-    "antd": "^4.18.8",
+    "antd": "^4.18.9",
     "antd-dayjs-webpack-plugin": "^1.0.6",
     "axios": "^0.26.0",
     "babel-plugin-import": "^1.13.3",
-    "dayjs": "^1.10.7",
+    "dayjs": "^1.10.8",
     "dva-core": "^2.0.4",
     "event-emitter": "~0.3.5",
     "fast-deep-equal": "3.1.3",
